--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,19 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-shapefile</artifactId>
+			<version>21.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-swing</artifactId>
+			<version>21.1</version>
+		</dependency>
+
+
+
 
 	</dependencies>
 
